deny-all-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: deny-all-db
  namespace: database-ns
spec:
  podSelector: {}
  policyTypes: 
  - Ingress
